--- a/readme
+++ b/readme
@@ -2,4 +2,6 @@ Project’s aim was to analyze Manchester crime data and gain statistical infere
 Analyzed data using exploratory data analysis techniques with tools such as   Python, NumPy, Pandas, and Seaborn library. 
 Created visuals using seaborn to help visulaize the insights.
 
+Tools used: Python, Numpy, Pandas, Seaborn, Matplotlib
+
 Dataset Used: https://data.police.uk/data/
